--- a/src/App.scss
+++ b/src/App.scss
@@ -1,12 +1,11 @@
 // change the theme
 $theme-colors: (
-  "primary": #424242,
-  "danger": #ff4136
+    "primary": #424242,
+    "danger": #ff4136
 );
 
-$primary: #333;
 
 
 // Import Bootstrap and its default variables
 @import '~bootstrap/scss/bootstrap.scss';
-
+// change the theme
