--- a/src/App.scss
+++ b/src/App.scss
@@ -4,7 +4,7 @@ $theme-colors: (
     "danger": #ff4136
 );
 
-
+$primary: #424242;
 
 // Import Bootstrap and its default variables
 @import '~bootstrap/scss/bootstrap.scss';
